# Hako

./: .gitignore  .prettierignore  HANDOFF.md  README.md  eslint.config.js  handoff-cloud-phase2.md  handoff-cloud-upload-next.md  handoff-cloud-upload.md  handoff-mixer-latency.md  handoff.md  index.html  medal-design-system.md  overlay.html  package.json  tsconfig.json  updater.html  vite.config.ts
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
scripts/: fetch-ffmpeg.ps1  make_logo.py
src/: main.tsx  router.tsx  styles.css
src-tauri/: .env.example  Cargo.toml  build.rs  tauri.conf.json
src-tauri/assets/: games.json
src-tauri/capabilities/: default.json  overlay.json  updater.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  events.rs  main.rs  media.rs  overlay.rs  settings.rs
src-tauri/src/cloud/: download.rs  mod.rs  oauth.rs  operator.rs  providers.rs  retention.rs  upload.rs
src-tauri/src/commands/: editor.rs  mod.rs  storage.rs
src-tauri/src/core/: audio.rs  buffer.rs  capture.rs  clock.rs  convert.rs  cursor_overlay.rs  denoise.rs  device.rs  disk_buffer.rs  encode.rs  gpu_priority.rs  mod.rs  mux.rs  overlay_card.rs  session.rs  wgc.rs
src-tauri/src/core/audio/: devices.rs  mod.rs
src-tauri/src/core/capture/: mod.rs  window.rs
src-tauri/src/core/encode/: codec.rs  mod.rs  probe.rs
src-tauri/src/core/hook/: contract.rs  host.rs  mod.rs
src-tauri/src/core/session/: mod.rs  tests.rs
src-tauri/src/games/: engine.rs  event.rs  event_config.rs  lockfile.rs  mod.rs  net.rs  orchestrator.rs  process_snapshot.rs  recording.rs  timeline.rs
src-tauri/src/games/cs2/: detect.rs  events.rs  gsi.rs  integration.rs  mod.rs  payload.rs
src-tauri/src/games/dota2/: detect.rs  events.rs  gsi.rs  integration.rs  mod.rs  payload.rs
src-tauri/src/games/generic/: catalog.rs  curated.rs  detect.rs  integration.rs  mod.rs  steam.rs
src-tauri/src/games/gsi/: mod.rs
src-tauri/src/games/lol/: context.rs  detect.rs  events.rs  integration.rs  live_client.rs  mod.rs
src-tauri/src/games/pubg/: detect.rs  events.rs  integration.rs  mod.rs  parse.rs  watch.rs
src-tauri/src/games/rematch/: context.rs  detect.rs  events.rs  integration.rs  log_watch.rs  mod.rs
src-tauri/src/games/warthunder/: api.rs  detect.rs  events.rs  integration.rs  mod.rs
src-tauri/src/valorant/: cut.rs  integration.rs  live.rs  local_api.rs  lockfile.rs  log_watch.rs  mod.rs  model.rs  orchestrator.rs  pending.rs  reconcile.rs  remote_api.rs  service.rs  summary.rs
src/components/: app-layout.tsx  capture-test.tsx
src/components/clips/: clip-card.tsx  clip-upload-badge.tsx  clip-viewer.tsx  clips-bulk-bar.tsx  clips-toolbar.tsx  cloud-format.ts  upload-toast.tsx  use-clip-filters.ts  use-clip-selection.ts
src/components/clips/clip-card/: clip-actions-menu.tsx  clip-badges.tsx  clip-preview.tsx  format.ts  select-checkbox.tsx
src/components/clips/clip-viewer/: audio-settings.tsx  constants.ts  details-panel.tsx  filmstrip.tsx  format.ts  player-controls.tsx  save-dialog.tsx  use-clip-keyboard.ts  use-stem-mix.ts  use-trim-editor.ts  use-video-time.ts
src/components/clips/clips-toolbar/: multi-select-filter.tsx  option-row.tsx  options.ts  single-select-filter.tsx  types.ts
src/components/clips/grid/: metrics.ts  row-components.tsx  virtual-rows.ts
src/components/layout/: app-sidebar.tsx  hotkey-popovers.tsx  recorder-status-popover.tsx  window-titlebar.tsx
src/components/onboarding/: onboarding-wizard.tsx  step-preview.tsx
src/components/onboarding/step-preview/: audio-preview.tsx  auto-preview.tsx  clips-preview.tsx  done-preview.tsx  shared.tsx  storage-preview.tsx  video-preview.tsx  welcome-preview.tsx
src/components/onboarding/wizard/: config.ts
src/components/onboarding/wizard/steps/: audio-step.tsx  auto-step.tsx  clips-step.tsx  done-step.tsx  storage-step.tsx  video-step.tsx  welcome-step.tsx
src/components/settings/: cloud-providers.tsx  config.ts  format.ts  primitives.tsx  recording-audio.tsx  recording-status.tsx
src/components/settings/cloud-providers/: add-provider-form.tsx  config.ts  field.tsx  provider-row.tsx
src/components/settings/recording-audio/: all-pc-audio-panel.tsx  app-audio-panel.tsx  helpers.ts  mic-row.tsx  primitives.tsx
src/components/settings/sections/: audio-section.tsx  auto-section.tsx  capture-section.tsx  clip-section.tsx  cloud-section.tsx  overlay-section.tsx  request-game-dialog.tsx  status-section.tsx  storage-section.tsx  video-section.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  dropdown-menu.tsx  hotkey-recorder.tsx  popover.tsx  scroll-area.tsx  select.tsx  spinner.tsx  switch.tsx
src/games/: clip-presenter.ts  registry.tsx  use-game-assets.ts  use-game-assets.tsx
src/hooks/: use-capture.ts  use-cloud.ts  use-filmstrip.ts  use-gpu.ts  use-library.ts  use-lol-assets.ts  use-recorder.ts  use-settings.ts  use-track-mixer.ts  use-valorant-assets.ts  use-valorant.ts
src/hooks/cloud/: actions.ts  bridge.ts  download-store.ts  keys.ts  providers.ts  retention.ts  upload-store.ts  uploads.ts
src/hooks/track-mixer/: constants.ts  decode.ts  types.ts
src/lib/: api.ts  denoise-preview.ts  format.ts  image-predecode.ts  query-keys.ts
src/lib/api/: audio.ts  clips.ts  cloud.ts  custom-games.ts  events.ts  index.ts  overlay.ts  recorder.ts  settings.ts  valorant.ts
src/overlay/: main.tsx  overlay-app.tsx
src/perf/: react-scan.ts
src/routes/: clip-detail.tsx  clips.tsx  dashboard.tsx  settings.tsx  valorant.tsx
src/updater/: main.tsx
