[package]
name = "hako"
version = "0.1.0"
description = "Performance-first Valorant clip recorder"
authors = ["Hako"]
edition = "2021"
rust-version = "1.77"

# The binary that Tauri launches.
[[bin]]
name = "hako"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# FFmpeg hardware encode/mux. Links the bundled shared build at
# src-tauri/ffmpeg (FFMPEG_DIR in .cargo/config.toml). Prebuilt bindings for
# 8.1 avoid needing libclang/bindgen.
rusty_ffmpeg = { version = "0.17", features = ["ffmpeg8_1"] }

# Valorant integration: Riot local + remote HTTP (rustls, accept the
# localhost self-signed cert), base64 presence blob, process detection.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
base64 = "0.22"
sysinfo = "0.33"

# Clip library: bundled SQLite so there's no system dependency on Windows.
rusqlite = { version = "0.32", features = ["bundled"] }

# Encode extracted app icons (HICON → RGBA) to PNG for the audio-source list.
png = "0.17"

# Fast multithreaded allocator. The default Windows process heap is a bottleneck
# under the pipeline's allocation churn (per-packet Vecs, mux WriteOps, audio
# scratch, thumbnail decode); mimalloc as the global allocator cuts that latency.
mimalloc = "0.1"

# WebView2 COM interfaces, used to drop the UI's renderer to a low memory target
# while the window is hidden to tray during gameplay (`ICoreWebView2_19::
# SetMemoryUsageTargetLevel`). Direct dep so the interface types resolve at the
# same version Tauri's wry already links.
webview2-com = "0.38"

# `windows_core` as a direct dep so the `#[implement]` macro (used for the
# per-process-loopback COM completion handler) resolves the crate by name, at the
# same 0.61 version as `windows` (the graph also carries an older 0.57 via Tauri).
windows-core = "0.61"

# Windows GPU / capture stack. Version aligned with Tauri's windows-rs.
[dependencies.windows]
version = "0.61"
features = [
    "Foundation",
    "Graphics",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Win32_Foundation",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_UI_WindowsAndMessaging",
    # App-icon extraction for the audio-source list: SHGetFileInfoW (Shell) +
    # HICON → DIB pixels (GDI).
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    # Audio: WASAPI loopback (desktop) + mic capture, COM, QPC clock.
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    # PROPVARIANT VT_BLOB tag for the process-loopback activation params.
    "Win32_System_Variant",
    "Win32_System_Performance",
    # Audio capture-endpoint enumeration: read the device friendly-name property.
    "Win32_UI_Shell_PropertiesSystem",
    # Graphics-hook (game-capture) host orchestration: open the DLL's events /
    # mutexes / file mappings, hold the keepalive mutex, run the log pipe.
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_Security",
]

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
# Performance-first: optimize for speed (the real-time capture/encode/mux and
# audio/thumbnail CPU paths), not size. `lto`/`codegen-units=1`/`panic=abort`
# already minimize bloat; the binary grows modestly in exchange for faster code.
opt-level = 3
panic = "abort"
strip = true
