[package]
name = "hako"
version = "1.9.5"
description = "Performance-first game clip recorder"
authors = ["Hako"]
edition = "2021"
rust-version = "1.77"

# The binary that Tauri launches.
[[bin]]
name = "hako"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
# Load a local, gitignored `.env` at build time so a developer's OAuth client
# credentials get baked into the binary via `option_env!` (see build.rs). CI
# instead injects the real credentials as process env vars from GitHub secrets;
# either way the values reach `cloud::oauth` at compile time, never at runtime.
dotenvy = "0.15"

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
# Single-instance guard: a second launch (re-run installer, double-clicked icon,
# Start-menu, updater relaunch) must NOT spin up a parallel process. Two Hako
# processes would both open the SQLite clip library and both write settings.json,
# racing each other — that's the source of the intermittent "onboarding wizard
# reappears" (a placeholder-default settings write clobbering the real file) and
# a flickering/empty clip list. The plugin routes the new instance's argv into the
# already-running one and exits the duplicate (see the callback in main.rs, which
# must be the FIRST plugin registered).
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"
# Window geometry persistence: restore the main window's size/position/maximized
# state across launches. The window is created hidden and shown only after the
# plugin has applied the saved geometry, so there's no resize/reposition flicker.
tauri-plugin-window-state = "2"
# Discord-style auto-update: a small splash window checks GitHub Releases on
# launch, downloads + installs a signed update if one exists, then relaunches.
# `process` provides the relaunch-into-the-new-binary call after install.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# Native folder picker for the clip storage directory setting.
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# FFmpeg hardware encode/mux. Links the bundled shared build at
# src-tauri/ffmpeg (FFMPEG_DIR in .cargo/config.toml). Prebuilt bindings for
# 8.1 avoid needing libclang/bindgen.
rusty_ffmpeg = { version = "0.17", features = ["ffmpeg8_1"] }

# Offline microphone noise suppression for the clip editor's export path —
# applied to the mic stem *after* the match, never in the capture hot path. This
# is the RNNoise model as a pure-Rust port (no FFI, no model file, no codegen/JIT
# runtime), matching the editor's RNNoise WASM preview so what you hear equals
# what you save. (We first tried DeepFilterNet 3 via `deep_filter`/`tract` for its
# higher quality, but tract failed to build the model graph at runtime — "running
# pass codegen" — in debug builds, i.e. `tauri dev`. nnnoiseless just works.)
nnnoiseless = { version = "0.5", default-features = false }

# Valorant integration: Riot local + remote HTTP (rustls, accept the
# localhost self-signed cert), base64 presence blob, process detection.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
base64 = "0.22"
sysinfo = "0.33"
# Object-safe async methods on the GameIntegration trait (per-game `run` loops).
async-trait = "0.1"

# Inbound localhost HTTP server for Valve Game-State-Integration games (CS2 /
# Dota 2): the game POSTs JSON state to a port we host. Tiny, blocking, zero
# async surface — perfect for a localhost-only single-purpose endpoint (we
# deliberately avoid pulling in axum/hyper for one POST handler). See
# `games::gsi`.
tiny_http = "0.12"

# Clip library: bundled SQLite so there's no system dependency on Windows.
rusqlite = { version = "0.32", features = ["bundled"] }

# Cloud upload: one storage abstraction for S3 / Cloudflare R2 / Backblaze B2 /
# GCS (v1; gdrive/dropbox/onedrive come in Phase 2/3). `default-features = false`
# drops everything but the explicitly-listed services (OpenDAL ships only the
# in-memory service by default since 0.46).
#
# NOTE — TLS / no-OpenSSL: we deliberately do NOT add a TLS feature here. Since
# 0.46 OpenDAL removed all its own reqwest TLS feature flags and inherits whatever
# the single, Cargo-unified `reqwest` in the tree enables — which is `rustls-tls`
# (see the reqwest dep above, `default-features = false`). So no OpenSSL/native-tls
# is pulled in on Windows. (Adding a non-existent `rustls` feature here would fail
# to compile.) Pinned to 0.54: 0.56 renamed `services-*` → `service-*` (singular).
opendal = { version = "0.54", default-features = false, features = [
    "services-s3",
    "services-b2",
    "services-gcs",
    # Phase 2/3 consumer clouds. These are token-based APIs (no signed-URL
    # concept) so they can't presign — cloud retention gates eviction on
    # `ProviderKind::supports_presign()` so a non-presign-only clip is never
    # evicted into an unplayable state. OpenDAL auto-refreshes the access token
    # from the stored refresh_token + client_id/secret for all three.
    "services-gdrive",
    "services-dropbox",
    "services-onedrive",
] }

# Phase 2/3 consumer-cloud OAuth. opendal handles token *refresh* (above); these
# handle the interactive *login*: a loopback server catches the browser redirect
# (tauri-plugin-oauth), and oauth2 runs the Authorization-Code + PKCE exchange
# for the refresh token. oauth2 default-features off + rustls-tls keeps TLS on
# the same rustls/reqwest stack as the rest of the tree (no OpenSSL/native-tls).
oauth2 = { version = "5", default-features = false, features = ["reqwest", "rustls-tls"] }
tauri-plugin-oauth = "2"
# Open the provider's consent page in the system browser (URLs contain `&`, so a
# `cmd /C start` shell-out would mis-parse; this uses ShellExecute under the hood).
opener = "0.7"
# Parse the loopback redirect (`http://127.0.0.1:<port>/?code=..&state=..`) with
# correct percent-decoding. Already in the tree via reqwest/tauri/oauth2.
url = "2"

# OS-native secret storage (Windows Credential Manager) for provider access-key
# ids / secret keys / GCS service-account JSON. Secrets live here only — never in
# settings.json, cloud_providers.json, or the clip DB.
keyring = { version = "3", features = ["windows-native"] }

# Recycle-Bin deletes for cloud retention ("free up space"): evicted local clip
# files go to the OS trash by default (cloud_delete_to_recycle_bin), so a wrong
# eviction is recoverable. Hard delete (std::fs) only when the user opts out.
trash = "5"

# Encode extracted app icons (HICON → RGBA) to PNG for the audio-source list.
png = "0.17"

# Fast multithreaded allocator. The default Windows process heap is a bottleneck
# under the pipeline's allocation churn (per-packet Vecs, mux WriteOps, audio
# scratch, thumbnail decode); mimalloc as the global allocator cuts that latency.
#
# Force the Microsoft mimalloc **v2** C source via the libmimalloc-sys `v2`
# feature. Since libmimalloc-sys 0.1.45+, the default is mimalloc **v3**, which has
# a cluster of Windows heap-corruption / crash regressions (STATUS_HEAP_CORRUPTION
# 0xc0000374, access violations) — see purpleprotocol/mimalloc_rust #153 / #159 and
# the microsoft/mimalloc atomics bug behind them. The direct libmimalloc-sys dep is
# only here to pin that feature on (Cargo features are additive, so it applies to
# the instance the `mimalloc` wrapper uses). Drop the `v2` feature only once v3 is
# confirmed stable on x64 Windows under the capture pipeline.
mimalloc = "0.1"
libmimalloc-sys = { version = "0.1", features = ["v2"] }

# WebView2 COM interfaces, used to drop the UI's renderer to a low memory target
# while the window is hidden to tray during gameplay (`ICoreWebView2_19::
# SetMemoryUsageTargetLevel`). Direct dep so the interface types resolve at the
# same version Tauri's wry already links.
webview2-com = "0.38"

# `windows_core` as a direct dep so the `#[implement]` macro (used for the
# per-process-loopback COM completion handler) resolves the crate by name, at the
# same 0.61 version as `windows` (the graph also carries an older 0.57 via Tauri).
windows-core = "0.61"

# Windows GPU / capture stack. Version aligned with Tauri's windows-rs.
[dependencies.windows]
version = "0.61"
features = [
    "Foundation",
    "Graphics",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Win32_Foundation",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    # Direct2D: composite the in-frame "tabbed out" freeze card onto the captured
    # BGRA staging texture before NV12 convert/encode (core::overlay_card).
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_UI_WindowsAndMessaging",
    # App-icon extraction for the audio-source list: SHGetFileInfoW (Shell) +
    # HICON → DIB pixels (GDI).
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    # Audio: WASAPI loopback (desktop) + mic capture, COM, QPC clock.
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    # PROPVARIANT VT_BLOB tag for the process-loopback activation params.
    "Win32_System_Variant",
    "Win32_System_Performance",
    # Audio capture-endpoint enumeration: read the device friendly-name property.
    "Win32_UI_Shell_PropertiesSystem",
    # Graphics-hook (game-capture) host orchestration: open the DLL's events /
    # mutexes / file mappings, hold the keepalive mutex, run the log pipe.
    "Win32_System_Threading",
    # GPU scheduling-priority boost: resolve D3DKMT* + gdi32 exports dynamically
    # (GetModuleHandleW / GetProcAddress) — see core::gpu_priority.
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_Security",
]

[profile.dev]
incremental = true

[profile.release]
# Performance-first, but tuned for a sane build time. We use ThinLTO + multiple
# codegen units rather than fat LTO + `codegen-units = 1`:
#   - Fat LTO merges the whole crate graph (tauri, windows-rs, opendal, ffmpeg,
#     sqlite, …) into one LLVM module and optimizes it single-threaded with
#     super-linear passes — it was the dominant cost of our ~12-min CI compile
#     and, unlike dependency compilation, it can't be cached (it re-runs every
#     build). ThinLTO keeps most of fat LTO's cross-crate inlining/devirt while
#     optimizing units in parallel across all cores.
#   - The runtime difference is negligible here: the real-time hot paths
#     (capture/encode/mux/audio) are FFI/GPU/SIMD-bound, not LLVM-inlining-bound.
# `opt-level = 3` + `panic = "abort"` + `strip` are unchanged. See also the lld
# linker in .cargo/config.toml.
codegen-units = 16
lto = "thin"
opt-level = 3
panic = "abort"
strip = true
